# Fruit

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Dataset/: entrenamiento.xlsx
Notebooks/: 2023-07-28-fruit-initial-data-clean.ipynb  2023-07-31-fruit-initial-data-clean.ipynb
Scripts/: highlight.py
docs/: conf.py
notebooks/: 2023-07-28-fruit-initial-data-clean.ipynb  2023-07-31-fruit-initial-data-clean.ipynb  2023-08-07-fruit-imputation-whithout-nan.ipynb  2023-08-07-fruit-nan-imputation.ipynb  2023-08-08-fruit_01_imputation-with-nan.ipynb  2023-08-08-fruit_02_imputation-comparative.ipynb  2023-09-08-fruit-create-imputedDataset.ipynb  2023-09-09-fruit_01_outliers.ipynb  2023-09-24-fruit_02_outliers.ipynb  2023-09-25-fruit_01_regression-model.ipynb  2023-09-29-fruit_01_models.ipynb  2023-09-29-fruit_03_models-standardised.ipynb  2023-09-30-fruit_01_models_cleanup.ipynb  2023-09-30-fruit_02_improve-models.ipynb  2023-09-30-fruit_03_validation.ipynb  2023-09-30-fruit_04_validation.ipynb  2023-09-30-fruit_05_gradient-boost.ipynb  2023-09-30-fruit_06_random-forest.ipynb  2023-09-30-fruit_07_stacking.ipynb  2023-10-01-fruit_01_outliers.ipynb  2023-10-01-fruit_02_without-missing.ipynb  2023-10-01-fruit_03_correlation.ipynb  2023-10-01-fruit_04_c6.ipynb  2023-10-01-fruit_05_c4.ipynb  2023-10-01-fruit_06_c9.ipynb  2023-10-01-fruit_07_pca.ipynb  2023-10-01-fruit_08_restart.ipynb  2023-10-01-fruit_09_outliers-removed.ipynb  2023-10-01-fruit_10_outliers-mediam.ipynb  2023-10-01-fruit_11_outliers-capped.ipynb  (+8 more)
(+2 files in other folders)
