[tool.poetry]
name = "fruit quality"
version = "0.1.0"
description = "Fruit quality pedricition by regression"
authors = ["Alberte Vieites <albertevieites@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
jupyter = "^1.0.0"
openpyxl = "^3.1.2"
ipykernel = "^6.25.2"
statsmodels = "^0.14.0"
xgboost = "^2.0.0"
# tensorflow = "^2.14.0"  # Temporalmente comentado debido a problemas de compatibilidad con Python 3.12


[tool.poetry.group.dev.dependencies]
klib = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
